1998-08-01  Raja R Harinath  <harinath@cs.umn.edu>

	* Makefile.am (EXTRA_DIST): Remove `macros.dep'.

1998-07-30  Martin Baulig  <martin@home-of-linux.org>

	* gnome-libgtop-check.m4 (GNOME_LIBGTOP_TYPES): New macro.
	Checks for `u_int64_t' and `int64_t'.

1998-07-29  Martin Baulig  <martin@home-of-linux.org>

	* gnome-libgtop-check.m4: Added (AC_SUBST):
	`LIBGTOP_NAMES_LIBS', `LIBGTOP_NAMES_INCS',
	`LIBGTOP_GUILE_LIBS', `LIBGTOP_GUILE_NAMES_LIBS',
	`LIBGTOP_MAJOR_VERSION', `LIBGTOP_MINOR_VERSION',
	`LIBGTOP_VERSION'.

	* gnome-libgtop-sysdeps.m4 (libgtop_sysdeps_dir):
	Added `AC_SUBST(libgtop_sysdeps_dir)'.

1998-07-29  Raja R Harinath  <harinath@cs.umn.edu>

	* gnome-support.m4: Check for functions that `error.c' looks for.

1998-07-29  Martin Baulig  <martin@home-of-linux.org>

	* gnome-fileutils.m4 (AM_FUNC_ERROR_AT_LINE): Removed.

	* gnome-support.m4 (AM_FUNC_ERROR_AT_LINE): New check.

1998-07-27  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-x-checks.m4: Changed Gtk version test to use
	GTK_HAVE_FEATURES_1_1_0.

Sun Jul 26 13:59:53 EDT 1998  Daniel Veillard <Daniel.Veillard@w3.org>

	* Makefile.am (MACROS): Added gnome-xml-check.m4
	* gnome-xml-check.m4: New file.

1998-07-24  Martin Baulig  <martin@home-of-linux.org>

	* gnome-libgtop-check.m4: No longer requiring
	`GNOME_LIBGTOP_SYSDEPS'.

Fri Jul 24 00:45:38 1998  Tom Tromey  <tromey@cygnus.com>

	* Makefile.am (MACROS): Added linger.m4.
	* linger.m4: New file.

Thu Jul 23 22:41:23 1998  Tom Tromey  <tromey@cygnus.com>

	* Makefile.am (MACROS): Added gnome-undelfs.m4, gnome-vfs.m4.
	* gnome-undelfs.m4: New file.
	* gnome-vfs.m4: New file.

1998-07-22  Martin Baulig  <martin@home-of-linux.org>

	* gnome-fileutils.m4: Added some reasonable defaults to allow
	cross compiling; removed `mountlist.o' and `fsusage.o' from
	LIBOBJS.

Tue Jul 21 23:44:53 1998  Tom Tromey  <tromey@cygnus.com>

	* gnome-guile-checks.m4: If no build-guile, link against readline
	before termcap.
